# drift-triage-copilot

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  ARCH.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  README.md  RUNBOOK.md  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: test.yml
agent/: Dockerfile  langgraph.json  pyproject.toml
agent/app/: database.py  main.py  models.py  studio.py
agent/app/core/: config.py
agent/app/graph/: __init__.py
agent/app/llm/: __init__.py  client.py
agent/app/nodes/: action.py  comms.py  supervisor.py  triage.py
agent/app/prompts/: action.txt  comms.txt  triage.txt
agent/app/queue/: __init__.py  client.py
agent/app/routers/: approvals.py  investigations.py  webhooks.py  worker_jobs.py
agent/app/schemas/: state.py
agent/prompts/: action.txt  comms.txt  supervisor.txt  triage.txt
agent/tests/: test_config.py  test_llm_action.py  test_llm_comms.py  test_llm_triage.py  test_smoke.py  test_trajectories.py
agent/tests/fixtures/: high_severity_trajectory.json
dashboard/: Dockerfile  app.py  pyproject.toml
mlflow/: Dockerfile
platform/: .dockerignore  Dockerfile  README.md  alembic.ini  bootstrap.py  pyproject.toml
platform/alembic/: env.py
platform/alembic/versions/: 0001_predictions_log.py
platform/app/: __init__.py  dependencies.py  main.py
platform/app/core/: config.py  logging.py
platform/app/db/: __init__.py  base.py  engine.py  models.py
platform/app/routers/: drift.py  predict.py
platform/app/schemas/: drift.py  prediction.py
platform/app/services/: drift_scheduler.py  drift_service.py  model_loader.py  prediction_log.py  webhook.py
platform/ml/: __init__.py  data.py  drift_metrics.py  drift_stats.py  evaluate.py  features.py  model_card.md  registry.py  train.py
platform/notebooks/: train.ipynb
platform/scripts/: mock_webhook_receiver.py
platform/tests/: test_data.py  test_drift_api.py  test_drift_metrics.py  test_drift_scheduler.py  test_drift_service.py  test_drift_stats.py  test_predict.py  test_prediction_log.py  test_registry.py  test_schemas.py  test_threshold.py  test_webhook.py
shared/: __init__.py  contracts.py
worker/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
worker/alembic/: env.py  script.py.mako
worker/alembic/versions/: 0001_worker_action_jobs.py  0002_worker_action_jobs_tz.py
worker/app/: main.py
worker/app/core/: config.py  logging.py
worker/app/db/: __init__.py  base.py  engine.py  models.py  repository.py
worker/app/handlers/: base.py  dispatcher.py  replay_test.py  retrain.py  rollback.py
worker/app/queue/: adapter.py  keys.py
worker/app/runtime/: idempotency.py  loop.py  retry_policy.py  retry_scheduler.py
worker/scripts/: seed_test_action.py
worker/tests/: conftest.py  test_dispatcher.py  test_e2e_replay_test.py  test_handler_stubs.py  test_idempotency.py  test_loop_dispatch.py  test_loop_validation.py  test_persistence.py  test_queue_adapter.py  test_retry_policy.py  test_retry_scheduler.py  test_settings.py  test_smoke.py
