[project]
name = "agent"
version = "0.1.0"
description = "Drift Triage Co-Pilot — LangGraph Supervisor"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "redis>=5.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["E501", "S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Put the repo root on sys.path so tests can `from shared.contracts import ...`
# In the agent container the Dockerfile sets PYTHONPATH=/app; this mirrors that for local `uv run pytest`.
pythonpath = [".", ".."]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.25",
    "langgraph[cli]>=1.1.10",
]
