[project]
name = "dashboard"
version = "0.1.0"
description = "Drift Triage Co-Pilot — Streamlit Dashboard"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.10",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
