[project]
name = "worker"
version = "0.1.0"
description = "Drift Triage Co-Pilot — Action Worker"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["E501", "S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Put the repo root on sys.path so tests can `from shared.contracts import ...`
# (used from Step 3 onwards). In the worker container the Dockerfile sets
# PYTHONPATH=/app; this mirrors that for local `uv run pytest`.
pythonpath = [".", ".."]
